add swagger details to get breads endpoint
