# app/controllers/bread.controller.js
@@ -5,15 +5,18 @@ const Op = db.Sequelize.Op;
 
 // Retrieve all breads from the database.
 exports.findAll = (req, res) => {
-  /* 	#swagger.tags = ['Breads']
-      #swagger.description = 'Endpoint to list breads' */
-
-  /*	#swagger.parameters['obj'] = {
-        in: 'body',
-        description: 'Bread',
-        required: true,
-        schema: { $ref: "#/definitions/Bread" }
-  } */
+/* #swagger.tags = ['Breads']
+   #swagger.description = 'Endpoint to list breads' */
+/* #swagger.parameters['obj'] = {
+    in: 'body',
+    description: 'Bread',
+    required: true,
+      schema: { $ref: "#/definitions/AddBread" }
+    } */
+/* #swagger.responses[200] = {
+    description: 'Breads successfully obtained.',
+    schema: { $ref: '#/definitions/Bread' }
+    } */
   Bread.findAll()
     .then(data => {
       res.status(200).send(data);
